add some touchs

--- a/index.html
+++ b/index.html
@@ -732,12 +732,14 @@
               <span>Seconds</span>
             </div>
           </div>
-          <h2>Tech Masters Event 2021</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
-            tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi
-            nulla in harum, veritatis porro
-          </p>
+          <div class="text">
+            <h2>Tech Masters Event 2021</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
+              tenetur doloremque iusto ut adipisci quam ratione aliquam
+              excepturi nulla in harum, veritatis porro
+            </p>
+          </div>
         </div>
       </div>
       <div class="subscribe">
